Generalize workspace compiler args (#128)